objects/agf__ADM_Certification__c.object
<CustomObject>
    <fields>
        <fullName>agf__Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Certified_On__c</fullName>
        <label>Certified On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scrum Master</fullName>
                </value>
                <value>
                    <fullName>Product Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Certification</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Certification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__User_Required_on_Certification_record</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(agf__User__c)</errorConditionFormula>
        <errorDisplayField>agf__User__c</errorDisplayField>
        <errorMessage>User is required to save Certification data</errorMessage>
    </validationRules>
</CustomObject>